CMake: Fix using TBB in Linux
error: Even when TBB not found, the target TBB::tbb exist.
solution: Check for TBB_FOUND before using the target.

error:
```bash
-- TBB_FOUND: 0. tbb_libraries: TBB::tbb
CMake Error in /home/vsts/work/1/s/build/CMakeFiles/CMakeTmp/CMakeLists.txt:
  Imported target "TBB::tbb" includes non-existent path

    "TBB_INCLUDE_DIR-NOTFOUND"

  in its INTERFACE_INCLUDE_DIRECTORIES.  Possible reasons include:

  * The path was deleted, renamed, or moved to another location.

  * An install or uninstall procedure did not complete successfully.

  * The installation package was faulty and references files it does not
  provide.
```

--- a/modules/generate/CMakeLists.txt
+++ b/modules/generate/CMakeLists.txt
@@ -7,10 +7,12 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   set(CMAKE_FIND_PACKAGE_PREFER_CONFIG ON)
   set(TBB_FIND_RELEASE_ONLY ON)
   find_package(TBB QUIET ) # For c++17 std::execution::par_unseq in gcc
-  if(TARGET TBB::tbb)
-    set(_parallel_stl_extra_libraries TBB::tbb)
-  else()
-    set(_parallel_stl_extra_libraries ${TBB_LIBRARIES})
+  if(TBB_FOUND)
+    if(TARGET TBB::tbb)
+      set(_parallel_stl_extra_libraries TBB::tbb)
+    else()
+      set(_parallel_stl_extra_libraries ${TBB_LIBRARIES})
+    endif()
   endif()
   set(CMAKE_FIND_PACKAGE_PREFER_CONFIG ${OLD_CMAKE_FIND_PACKAGE_PREFER_CONFIG})
   message(STATUS "TBB_FOUND: ${TBB_FOUND}. tbb_libraries: ${_parallel_stl_extra_libraries}")
