Azure: Fix azure macos
```
/Applications/Xcode_12.3.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/cmath:319:9: error: no member named 'isfinite' in the global namespace; did you mean 'finite'?
using ::isfinite;
      ~~^
/Applications/Xcode_12.2.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.0.sdk/usr/include/math.h:752:12: note: 'finite' declared here
extern int finite(double)
```

Proposed fix: use `#include <cmath>` before any `#include "math.h"`
From: https://developer.apple.com/forums/thread/110594

Note: It's disturbing the reference to Xcode_12.2 when Xcode_12.3 seems
the default (or vice versa).
Azure defaults: https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md#xcode

To fix the later, explicitly select the xcode with:
 `xcode-select -switch /applications/Xcode_12.3.app`

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,9 +48,17 @@ stages:
         runVersion: 'latest'
         artifact: DEPENDENCIES_BUILD_DIR_MACOS
         path: $(DEPENDENCIES_BUILD_DIR)
+
+    - script: sudo xcode-select -switch /Applications/Xcode_12.3.app
+      displayName: "Select Xcode version"
+
+    - script: xcodebuild -version
+      displayName: "Xcode version"
+
     - task: UsePythonVersion@0
       inputs:
         versionSpec: '$(python.version)'
+
     - task: Bash@3
       inputs:
         filePath: '$(Build.SourcesDirectory)/deploy/deploy_macos_one_python.sh'
