Fix macos warning about inconsistent fvisibility
Error:
```
ld: warning: direct access in function 'virtual thunk to boost::....' from file
'./lib/libboost_program_options.a(value_semantic.o)' to global weak symbol
`.....<boost::program_options::validation_error> >' from file
'cpp-scripts/CMakeFiles/analyze_graph.dir/analyze_graph.cpp.o'
means the weak symbol cannot be overridden at runtime.
This was likely caused by different translation units being compiled with different visibility settings
```

Fix: It seems that the default for xcode is not consistently applied,
depending on static/shared libraries.
Force boost to compile with `-fvisibility=hidden`

PostNote:
After this change, quite a few warnings were solved, however, we still see it when pybind11 is involved.
pybind11 sets the visibility of `pybind11_add_module(_sgext)` to hidden.
So, when anything else (SGCore, etc.) is not hidden we are going to hit these warnings.
Setting it to always hidden will cause problems when our libraries are SHARED.

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -224,6 +224,9 @@ if ( APPLE )
       cxxflags=-std=c++${CMAKE_CXX_STANDARD}
       cxxflags=-stdlib=libc++
       cxxflags=-mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}
+      # Solves: ld: warning: direct access in function ... from file ... to global weak symbol
+      # Needed because we are building with link=static
+      cxxflags=-fvisibility=hidden
       linkflags=-stdlib=libc++
       )
   endif()
