--- a/modules/analyze/CMakeLists.txt
+++ b/modules/analyze/CMakeLists.txt
@@ -36,7 +36,5 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/sgext
   PATTERN "*.txt" EXCLUDE)
 
-# export to the build tree
-export( TARGETS ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
-  NAMESPACE SGEXT::
-  APPEND FILE ${sgext_export_file})
+# Append to _targets_to_export in the PARENT_SCOPE.
+set(_targets_to_export ${_targets_to_export} ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY} PARENT_SCOPE)
