--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,8 @@ stages:
           python.version: '3.8'
         Python39:
           python.version: '3.9'
+        Python310:
+          python.version: '3.10'
     steps:
     - task: DownloadPipelineArtifact@2
       inputs:
@@ -90,6 +92,8 @@ stages:
           python.version: '3.8'
         Python39:
           python.version: '3.9'
+        Python310:
+          python.version: '3.10'
     steps:
     - task: DownloadPipelineArtifact@2
       inputs:
