--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,8 @@ stages:
           python.version: '3.9'
         Python310:
           python.version: '3.10'
+        Python311:
+          python.version: '3.11'
     steps:
     - task: DownloadPipelineArtifact@2
       inputs:
@@ -94,6 +96,8 @@ stages:
           python.version: '3.9'
         Python310:
           python.version: '3.10'
+        Python311:
+          python.version: '3.11'
     steps:
     - task: DownloadPipelineArtifact@2
       inputs:
