--- a/modules/tree/cli/CMakeLists.txt
+++ b/modules/tree/cli/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(generation_analysis generation_analysis.cpp)
 # Boost_DIR is set from SGEXT
 find_package(Boost COMPONENTS
         program_options
+        filesystem
         REQUIRED)
 
 set(_cli_libs
@@ -10,6 +11,7 @@ set(_cli_libs
     SGEXT::SGVisualize
     SGEXT::SGScripts
     Boost::program_options
+    Boost::filesystem
     )
 
 target_link_libraries(generation_analysis ${_cli_libs})
